# Little_Studio

./: .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  LICENSE  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
docs/: RELEASE_NOTES_v0.31.1.md
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: app.tsx
src/app/providers/: app-providers.tsx  query-client.ts
src/app/router/: not-found-page.tsx  route-error-boundary.tsx  routes.tsx
src/components/shared/: about-dialog.tsx  connection-status-meta.ts  connection-status.tsx  empty-state.tsx  index.ts  launch-screen.tsx  logo.tsx  page-header.tsx  panel-header.tsx  project-card.tsx  video-card.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  index.ts  input.tsx  kbd.tsx  (+10 more)
src/hooks/: index.ts  use-capability-text.ts  use-disclosure.ts  use-generation-queue.ts  use-openrouter.ts  use-projects-list.ts  use-shortcuts.ts
src/i18n/: context.ts  index.ts  provider.tsx
src/layouts/: app-shell.tsx  index.ts  sidebar.tsx  top-bar.tsx
src/lib/: commands.ts  duration.ts  http.ts  motion.ts  shortcuts.ts  utils.ts  version-tree.ts
src/services/: index.ts
src/stores/: settings-store.ts  ui-store.ts
src/styles/: globals.css
src/types/: common.ts  index.ts  money.ts
(+83 files in other folders)
